--- a/index.html
+++ b/index.html
@@ -3,31 +3,38 @@
 <head>
 <script>
 function buttonClicked() {
-document.body.style.backgroundImage = "url(si.gif)";}
+document.body.style.backgroundImage = "url(si.gif)";
+document.title = "死にたい";}
 </script>
 <script>
 function buttonClicked2() {
-document.body.style.backgroundImage = "url(defo.png)";}
+document.body.style.backgroundImage = "url(defo.png)";
+document.title = "home";}
 </script>
 <script>
 function buttonClicked3() {
-document.body.style.backgroundImage = "url(kuro.png)";}
+document.body.style.backgroundImage = "url(kuro.png)";
+document.title = "ダーク";}
 </script>
 <script>
 function buttonClicked4() {
-document.body.style.backgroundImage = "url(siro.png)";}
+document.body.style.backgroundImage = "url(siro.png)";
+document.title = "ホワイト";}
 </script>
 <script>
 function buttonClicked5() {
-document.body.style.backgroundImage = "url(me1.gif)";}
+document.body.style.backgroundImage = "url(me1.gif)";
+document.title = "目潰し1";}
 </script>
 <script>
 function buttonClicked6() {
-document.body.style.backgroundImage = "url(me2.gif)";}
+document.body.style.backgroundImage = "url(me2.gif)";
+document.title = "目潰し2";}
 </script>
 <script>
 function buttonClicked7() {
-document.body.style.backgroundImage = "url(me3.gif)";}
+document.body.style.backgroundImage = "url(me3.gif)";
+document.title = "目潰し3";}
 </script>
 <style>
 body{
