--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@ function buttonClicked7() {
 document.body.style.backgroundImage = "url(me3.gif)";
 document.title = "目潰し3";}
 </script>
+<script>
+function buttonClicked8() {
+document.body.style.backgroundImage = "url(hora.gif)";
+document.title = "hora";}
+</script>
 <style>
 body{
   background-image: url("a.jpg");}
@@ -94,6 +99,11 @@ body{
   position: fixed;
   bottom: 10px;
   left: 1145px;}
+#gd-menu12 {
+  margin:0;
+  position: fixed;
+  bottom: 10px;
+  left: 1285px;}
   
 *,
 *:before,
@@ -218,5 +228,6 @@ a.btn-border:active:before {
 <button id="gd-menu9" class="btn btn-border" onclick="buttonClicked5()">目潰し1</button>
 <button id="gd-menu10" class="btn btn-border" onclick="buttonClicked6()">目潰し2</button>
 <button id="gd-menu11" class="btn btn-border" onclick="buttonClicked7()">目潰し3</button>
+<button id="gd-menu12" class="btn btn-border" onclick="buttonClicked8()">Horror</button>
 </body>
 </html>
